css/main.css
/* ... */
.bio-box img {
    width: 100%;
}

.bio-box .social-link {
    display: block;
    margin: 2em auto 1em;
}

.bio-copy {
    font-size: 0.75em;
}

/* GALLERY STYLES */
.gallery-thumbs {
    height: 90vh;
    overflow: scroll;
}

.gallery-thumbs>div {
    cursor: pointer;
}

.gallery-thumbs .current {
    cursor: default;
}

.gallery-thumbs img {
    box-sizing: border-box;
    box-shadow: 0 0 0 5px transparent;
    display: inline-block;
    margin: 0 0 10px 0;
    opacity: 0.5;
    transition: all 0.5s ease-in-out;
    width: 100%;
}

.gallery-thumbs img:hover {
    opacity: 1;
}

.gallery-thumbs .current img {
    box-shadow: 0 0 0 5px #ed6e2f;
    opacity: 1;
}

.gallery-photo {
    position: relative;
}

.gallery-photo img {
    width: 100%;
}

.gallery-info {
    font-size: 0.8rem;
}

.gallery-info h3 {
    margin-bottom: 1em;
}

/* BLOG STYLES */

.blog-recent {
    text-align: right;
}

.blog-title-list {
    list-style: none;
    padding: 0;
}

.blog-title-list li~li {
    margin-top: 1.5em;
}

.post-byline span,
.blog-title-list span {
    color: #999;
    display: block;
    font-size: 0.8em;
    font-style: italic;
    margin-top: 0.5em;
}

.post-byline span {
    display: inline-block;
}

.post-byline {
    margin-bottom: 0.5em;
}

.blog-posts~.blog-posts {
    border-top: 1px dotted rgba(0, 0, 0, 0.1);
    margin-top: 4em;
    padding-top: 4em;
}

.blog-posts .post-header {
    font-size: 0.8rem;
}

.post-header {
    margin-bottom: 1.5em;
}

.post-header img,
.post-header .social-link {
    margin-right: 0.5em;
}

.blog-title-list img,
.post-header img {
    border-radius: 99px;
    display: inline-block;
    height: 2.5em;
    vertical-align: middle;
}

.posts-image {
    background-position: center;
    background-size: cover;
    height: 6em;
    margin-bottom: 1.5em;
}

.post {
    width: 100%;
}

.post-content,
.post-footer {
    margin: auto;
    max-width: 40em;
    width: 85em;
}

.pull-left {
    float: left;
    margin: 2em 2em 2em -2%;
}

.pull-right {
    float: right;
    margin: 2em -2% 2em 2em;
}

.post-aside {
    background-color: rgba(0, 0, 0, 0.01);
    float: right;
    margin: 0 0 2em 2em;
    padding: 2em;
}

.post .post-header {
    margin-bottom: 2.5em;
    text-align: center;
}

.post-content {
    font-size: 1.1rem
}

.post-footer {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    font-size: 0.8em;
    font-style: italic;
    margin-top: 3em;
    padding-top: 2em;
}

@media (max-width: 800px) {
    html {
        box-shadow: none;
        padding: 0;
    }

    /* HEADER STYLES */
    .header-nav {
        padding: 2vh 1em 0 0;
    }

    .header-nav>li {
        margin-left: 0.25em;
    }

    .header-nav>li~li {
        padding-left: 0.25em;
    }

    .nav-links a {
        font-size: 3.25vw;
    }

    .header-logo {
        left: auto;
    }

    /* MOBILE MENU */
    .show-mobile-menu {
        display: block;
        float: right;
        font-weight: bold;
        margin-top: 1.5vh;
        padding: 1.5em;
        position: relative;
        text-transform: uppercase;
    }

    .header-nav {
        background-color: #444;
        box-sizing: border-box;
        left: 0;
        max-height: 0;
        overflow: hidden;
        padding: 0;
        position: absolute;
        text-align: center;
        top: 10vh;
        transition: all 0.5s ease-in-out;
        width: 100%;
        z-index: 9;
    }

    .header-nav li {
        display: block;
        margin-top: 1em;
    }

    .header-nav li:first-child a{
        color: #fff;
    }

    .header-nav li:last-child {
        margin-bottom: 1em;
    }
    
    .header-nav .dropdown:hover .drop-menu,
    .header-nav .drop-trigger:after {
        display: none;
    }

    .header-nav .drop-trigger {
        padding-right: 0;
    }
   
    .mobile-menu-check:checked~.header-nav {
        max-height: 1000px;
    }

    .mobile-menu-check:checked ~.show-mobile-menu:after {
        background-color: #000;
        color:#ed6e2f;
        content: "CLOSE";
        left: 0;
        position: absolute;
        text-align: center;
        top: 1.5em;
        width: 100%;
    }

    /* HOME STYLES */
    .home-callout {
        flex-direction: column;
    }

    .callout-copy {
        flex: 1;
    }

    .bio-box {
        float: none;
        font-size: 1.3rem;
        width: auto;

    }

    /* BLOG STYLES */
    .post-aside {
        display: none;
    }

    .half-hero {
        display: none;
    }

    .blog-recent {
        /* display: none; */
        flex: 1;
        text-align: center';

    }

    .blog-previews {
        padding: 0;
    }

    .blog-cols {
        flex-direction: column;
    }

    /* GALLERY STYLES */

    .gallery {
        flex-direction: column;
    }

    .gallery .col {
        padding: 1em;
    }

    .gallery .gallery-thumbs {
        flex: 1;
        height: auto;
        white-space: nowrap;
        width: 100vw;
    }

    .gallery-thumbs>div {
        display: inline-block;
    }

    .gallery-thumbs img {
        height: 7vh;
        margin: 0 10px 0 0;
        width: auto;
    }

    .gallery .gallery-info {
        flex: 1;
    }
}

